<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewEscolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/buttonVerificar"
        app:layout_constraintStart_toStartOf="@+id/textViewEscolha"
        app:layout_constraintTop_toBottomOf="@+id/textViewEscolha" />

    <Button
        android:id="@+id/buttonVerificar"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:onClick="verificaNumero"
        android:text="@string/bottun"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumero"
        app:layout_constraintEnd_toEndOf="@+id/textViewEscolha" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:layout_marginTop="120dp"
        android:text="@string/resultado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editTextNumero"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero" />

    <TextView
        android:id="@+id/textViewMostrarResultado"
        android:layout_width="157dp"
        android:layout_height="59dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewResultado"
        app:layout_constraintEnd_toEndOf="@+id/buttonVerificar"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/textViewResultado" />

    <TextView
        android:id="@+id/textViewTentativas"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:layout_marginTop="116dp"
        android:text="@string/numero_tentativas"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textViewResultado"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultado" />

    <TextView
        android:id="@+id/textViewMostrarTentativas"
        android:layout_width="96dp"
        android:layout_height="41dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTentativas"
        app:layout_constraintEnd_toEndOf="@+id/textViewMostrarResultado"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewTentativas" />

</androidx.constraintlayout.widget.ConstraintLayout>